package edu.hitsz.ObserverPattern;

public interface Subscribers {
    void update();
}
