package edu.hitsz.bullet;

/**
 * @Author hitsz
 */
public class EnemyAbstractBullet extends AbstractBullet {

    public EnemyAbstractBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }
}
