package edu.hitsz.prop;

public interface propAction {
    public void action();
}
