package com.example.aircraftwar.bullet;

/**
 * @Author hitsz
 */
public class HeroAbstractBullet extends AbstractBullet {

    public HeroAbstractBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }

}
